@@ -276,6 +276,8 @@ __PACKAGE__->belongs_to(
 
 our $VERSION = '0';
 
+with 'WTSI::DNAP::Warehouse::Schema::Query::LimsFlags';
+
 __PACKAGE__->meta->make_immutable;
 
 1;
@@ -323,7 +325,7 @@ Marina Gourtovaia E<lt>mg8@sanger.ac.ukE<gt>
 
 =head1 LICENSE AND COPYRIGHT
 
-Copyright (C) 2014 Genome Research Limited
+Copyright (C) 2015 Genome Research Limited
 
 This file is part of the ml_warehouse package L<https://github.com/wtsi-npg/ml_warehouse>.
 
