@@ -445,6 +445,8 @@ use Readonly;
 
 our $VERSION = '0';
 
+with 'WTSI::DNAP::Warehouse::Schema::Query::LimsFlags';
+
 Readonly my @USER_ROLES = qw/manager follower owner/;
 
 Readonly my %DELEGATION_TO_SAMPLE => {
