@@ -1,6 +1,8 @@
 LIST OF CHANGES
 ---------------
 
+ - added a role providing methods to determine what LIMs system the record originated from
+
 release 0.5
  - ensure contains_human_dna and contaminated_human_dna behave in a boolean manner
  - update mapping of library_id lims field to database fields
